--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,9 @@
   "name": "gasmask",
   "description": "Allows user to choose two background extensions to use at random",
   "version": "1.0", 
-  "chrome_url_overrides": {
-    "newtab": "gasmask.html"
+  "background": {
+    "scripts": ["gasmask.js"],
+    "persistent": false
   },
   "permissions": [
     "management",
